2.7 - Removed GSON hard dep, optimized reflection, added class info cache, removed JS* annotations and old class construction, moved some classes around, added more tests